--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9628,7 +9628,7 @@ p{
 
 .confirm-order .button-assertive {
   float: right;
-  margin-top: 15px; }
+ }
 
 .confirm-order .total-amount {
   font-weight: 700;
