--- a/www/templates/pedido-realizado.html
+++ b/www/templates/pedido-realizado.html
@@ -1,7 +1,7 @@
-<ion-view view-title="NOMEDOAPP" class="">
+<ion-view view-title="Pedido Realizado" class="">
 
-<ion-content has-header="false" has-bouncing="false" class="thank-you-page padding">
-		<h1>Obrigado.</h1>
+<ion-content has-header="true" has-bouncing="false" class="thank-you-page padding">
+			<h2>Obrigado.</h2>
 		<p>	Em alguns segundos você receberá o status do seu pedido.
 		</p>
 		<div class="links">
