--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -36,51 +36,28 @@
         <ion-item menu-close item-type="item-icon-left" ui-sref="app.pedidos">
           <!-- <i class="icon ion-document-text"></i> --> Meus Pedidos
         </ion-item>
-      
-       <!--  <ion-item menu-close ui-sref="app.packages">
-          Packages
-        </ion-item> -->
-     
-      <!--   <ion-item menu-close ui-sref="app.categories">
-          Menu Types
-        </ion-item> -->
-      <!--   <ion-item menu-close ui-sref="app.offers">
-          Offers
-        </ion-item> -->
+  
         <ion-item menu-close ui-sref="app.contact">
           <!-- <i class="icon ion-information-circled"></i> --> Informações
         </ion-item>
-       <!--  <ion-item menu-close ui-sref="app.admob">
-          Admob
-        </ion-item> -->
-       <!--  <ion-item menu-close  ng-click="apprate()" href="#">
-          Rate Us
-        </ion-item> -->
-      <!--   <ion-item menu-close  class="item-icon-right" href="#" browse-to="{{facebookPage}}">
-          <i class="ionicon icon ion-social-facebook side-"></i> Like Us
-        </ion-item> -->
+ 
 
       </ion-list>
     </ion-content>
   </ion-side-menu>
   <ion-side-menu side="right" class="ion-side-menu" >
     <ion-content has-bouncing="false">
-    <!--   <div class="row">
-        <div class="app-logo">
-          <img src="http://www.mondonew.com/easyresto/assets/images/logo_er.png">
-        </div>
-      </div> -->
       <ion-list>
-
+      
         <ion-item
           ng-repeat="cat in cats"
           class="item-checkbox item-cat">
           <label class="checkbox">
              <input type="checkbox"
-              ng-model="filterCattest[cat.name]"
-              ng-change="filteration(cat.id)">
+              ng-model="filterCattest[cat.CATP_Nome]"
+              ng-change="filteration(cat.CATP_CodigoCategoria)">
           </label>
-          <span ng-bind="cat.name"></span>
+          <span ng-bind="cat.CATP_Nome"></span>
         </ion-item>
       </ion-list>
     </ion-content>
