--- a/www/templates/pedido-realizado.html
+++ b/www/templates/pedido-realizado.html
@@ -1,12 +1,14 @@
 <ion-view view-title="Pedido Realizado" class="">
 
 <ion-content has-header="true" has-bouncing="false" class="thank-you-page padding">
-			<h2>Obrigado.</h2>
+<br/><br/>
+  		<img src="img/icons/prepare.png">
+		<h3>Obrigado.</h3>
 		<p>	Em alguns segundos você receberá o status do seu pedido.
 		</p>
 		<div class="links">
-			<a ui-sref="app.pedidos" class="button button-light">Ver meus pedidos</a>
-			<a ui-sref="app.dishitems" class="button button-light">Continuar comprando</a>
+			<a ui-sref="app.pedidos" class="button button-positive">Ver meus pedidos</a>
+			<a ui-sref="app.dishitems" class="button button-positive">Continuar comprando</a>
 		</div>
 </ion-content>
 </ion-view>
